--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/components.js"></script>
 <script src="js/models.js"></script>
-<script src="js/welcome.js"></script>
+<script src="js/index.js"></script>
 
 </body>
 </html>
