--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<!DOCTYPE html>
-<meta http-equiv="refresh" content="0; url=https://repo.github.io/page_apps/index.html" />
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1;url=html/index.html">
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        If you are not redirected automatically, 
+        follow the <a href="html/index.html">link to the documentation</a>
+    </body>
+</html>
